--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,15 @@
   publish = "dist"
   command = "npm run build"
 
+[dev]
+  command = "npm run dev"
+  targetPort = 5173
+  port = 8888
+  autoLaunch = false
+
+[functions]
+  directory = "netlify/functions"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
